Update for Patch v3.12.5 - checksum: 9a6f

--- a/mod/thmod/localisation/english/apocalypse_l_english.yml
+++ b/mod/thmod/localisation/english/apocalypse_l_english.yml
@@ -296,6 +296,7 @@
  FLEET_MANAGER_DELETE_TEMPLATE_DIALOG_DESC:2 "คุณต้องการที่จะปลดกองยานนี้?\n\n§Rคำเตือน: การปลดกองยานจะปลดประจำการยานทุกลำที่เกี่ยวข้องกับกองยานนี้§!"
  FLEET_MANAGER_FLEET_NAME_FORMAT:0 "£military_ship£ $FLEET$"
  FLEET_MANAGER_NO_TEMPLATE_SELECTED_HINT:1 "§Eยังไม่ได้เลือกกองยาน§!"
+ FLEET_MANAGER_CANT_ADD_FEDERATION_DESIGN: "Cannot add Federation ship design to a non-Federation fleet."
  DISBAND_FM:1 "§Hยุบ§!"
  DISBAND_FM_DESC:0 "§Gคลิกเพื่อยกเลิกยานรบเหล่านี้§!"
  REMOVE_FROM_TEMPLATE_FM:0 "§Hลบออกจากเทมเพลต§!\n§Gคลิกเพื่อลบยานรบเหล่านี้ออกจากเทมเพลตกองยาน§!"
@@ -327,7 +328,10 @@
  FLEET_TEMPLATE_MILITARY_POWER:0 "£military_power£ $POWER_STRING$"
  FLEET_TEMPLATE_POWER_MAX_UNREACHED_VALUE_FORMAT:0 "$CURRENT_STRING|R$"
  FLEET_TEMPLATE_POWER_MAX_REACHED_VALUE_FORMAT:0 "$CURRENT_STRING$"
- FLEET_TEMPLATE_COMMAND_LIMIT_REACHED:0 "ขีดจำกัดคำสั่งไม่เพียงพอสำหรับการเพิ่มยานลำนี้"
+ FLEET_TEMPLATE_COMMAND_LIMIT_REACHED: "Command Limit too low to add this ship."
+ FLEET_TEMPLATE_FEDERATION_CAPACITY_REACHED: "Federation Naval Capacity too low to add this ship."
+ FLEET_TEMPLATE_GDF_CAPACITY_REACHED: "Galactic Defense Force Naval Capacity too low to add this ship."
+ FLEET_TEMPLATE_IMPERIAL_ARMADA_CAPACITY_REACHED: "Imperial Armada Naval Capacity too low to add this ship."
  FLEET_TEMPLATE_EVENT_DESIGN:0 "Event Design"
  MULTIPLE_SHIPS_DISBAND_TITLE:0 "ยุบยาน"
  MULTIPLE_SHIPS_DISBAND_DESC:2 "ปลดยานทั้ง $COUNT$ ลำ?"
