--- a/mod/thmod/localisation/english/civic_and_origin_concepts_l_english.yml
+++ b/mod/thmod/localisation/english/civic_and_origin_concepts_l_english.yml
@@ -48,7 +48,7 @@
  concept_robotic_workers: "$tech_robotic_workers$"
  concept_robotic_workers_desc: "- $i_unlocks_building$ $building_robot_assembly_plant$\n- $i_unlocks_feature$ $feature_robots$\n\n§L$tech_robotic_workers_desc$§!"
  concept_robomodding: "$tech_robomodding$"
- concept_robomodding_desc: "- $mod_ROBOT_species_trait_points_add$: §G+2§!\n- $i_unlocks_feature$ $feature_modify_robots$\n\n§L$tech_robomodding_desc$§!"
+ concept_robomodding_desc: "- $MOD_POP_ENVIRONMENT_TOLERANCE$: §G+5%§!\n- $i_unlocks_feature$ $feature_modify_robots$\n\n§L$tech_robomodding_desc$§!"
  concept_adaptive_frames: "$trait_auto_mod_robotic$"
  concept_syncretic_proles: "$trait_syncretic_proles$"
  concept_syncretic_proles_desc: "- $MOD_POP_HAPPINESS$: §G+10%§!\n- $mod_planet_jobs_produces_mult$: §G+10%§!\n- ไม่สามารถสร้าง §Yผู้นำ§! ได้\n- ไม่สามารถทำงาน §Y$pop_cat_ruler$§! หรือ §Y$pop_cat_specialist$§! ได้\n\n§L$trait_syncretic_proles_desc$§!"
@@ -342,3 +342,5 @@
  concept_astral_rift_desc: "$ASTRAL_RIFTS$ are extraordinary tears in time and space that leak material between dimensions. They can be explored by crewed §YScience Ships§! after researching the £physics£ §Y$tech_rift_sphere$§! technology."
  concept_riftworld_digsite: "$riftworld_digsite$"
  concept_riftworld_digsite_desc: "Anomalous seismic activity has been detected from deep inside an ancient crater on our homeworld. Underground sonar revealed a previously unknown cavity that can be explored."
+ concept_cloaking_1: "$tech_cloaking_1$"
+ concept_cloaking_1_desc: "- §I$UNLOCKS_FEATURE$§! Active Reconnaissance $NEW_LINE$- §I$UNLOCKS_COMPONENT$§! $CLOAKING_1$\n\n§L$tech_cloaking_1_desc$§!"
