--- a/mod/thmod/localisation/english/federations_l_english.yml
+++ b/mod/thmod/localisation/english/federations_l_english.yml
@@ -29,6 +29,7 @@
  AVAILABLE_BOMBARDMENT_STANCE: "มีการทิ้งระเบิดจากวงโคจรดาวแบบ:"
  AVAILABLE_POLICIES: "นโยบายที่มี:"
  UNLOCKS_FEATURE: "ปลดล็อกคุณสมบัติ:"
+ UNLOCKS_COMPONENT: "ปลดล็อกส่วนประกอบ:"
  origin_default:0 "ความสำเร็จในการรวมตัวกัน"
  origin_default_desc:1 "ผ่านความขัดแย้งและชัยชนะ สังคมนี้ได้บรรลุความทะเยอทะยานของอารยธรรมใหม่: โดยที่มีเป้าหมายหนึ่งเดียวและเส้นทางที่เปิดกว้างสู่ดวงดาว"
  origin_tooltip_default_effects_start: "- $INITIAL_POPS$ §G+4§!$NEW_LINE$- $HOMEWORLD$$TABBED_NEW_LINE$- ['concept_generator_district', £district£ $district_generator_plural$]: §G+1§!"
@@ -189,7 +190,7 @@
  resolutions:0 "$RESOLUTIONS$"
  MUST_BE_MEMBER:0 "You must be a member of the $GALACTIC_COMMUNITY$ to influence Resolutions and receive any associated benefits"
  ACTIVE_MODIFIERS:0 "ความเปลี่ยนแปลงเมื่อประกาศใช้"
- galactic_community_delegate:0 "$envoy_costs$"
+ galactic_community_delegate:0 "ผู้แทน"
  SENATE_FLOOR_VOTING:0 "§Hการลงมติเพื่อประกาศใช้§!"
  federation_leader_scaled_modifier:0 "ความจุกองยานสหพันธ์"
  left_galactic_community:0 "ออกจากประชาคมกาแล็กติก"
