--- a/mod/thmod/localisation/english/first_contact_dlc_tech_l_english.yml
+++ b/mod/thmod/localisation/english/first_contact_dlc_tech_l_english.yml
@@ -19,15 +19,15 @@
  feature_assist_cloaking_detection_unlocked_desc:0 "$ASSIST_CLOAKING_DETECTION_ORDER_DESC$"
  feature_active_reconnaissance_unlocked:0 "$ACTIVE_RECONNAISSANCE_ORDER$"
  feature_active_reconnaissance_unlocked_desc:0 "$ACTIVE_RECONNAISSANCE_ORDER_TECH_DESC$"
- TECH_UNLOCK_CLOAKING_1_TITLE:0 "§HUnlocks Component:§! $CLOAKING_1$"
+ TECH_UNLOCK_CLOAKING_1_TITLE:0 "§Hปลดล็อกส่วนประกอบ:§! $CLOAKING_1$"
  TECH_UNLOCK_CLOAKING_1_DESC:0 "§H$CLOAKING_1$§!\n$tech_cloaking_1_desc$"
- TECH_UNLOCK_CLOAKING_2_TITLE:0 "§HUnlocks Component:§! $CLOAKING_2$"
+ TECH_UNLOCK_CLOAKING_2_TITLE:0 "§Hปลดล็อกส่วนประกอบ:§! $CLOAKING_2$"
  TECH_UNLOCK_CLOAKING_2_DESC:0 "§H$CLOAKING_2$§!\n$tech_cloaking_2_desc$"
- TECH_UNLOCK_CLOAKING_3_TITLE:0 "§HUnlocks Component:§! $CLOAKING_3$"
+ TECH_UNLOCK_CLOAKING_3_TITLE:0 "§Hปลดล็อกส่วนประกอบ:§! $CLOAKING_3$"
  TECH_UNLOCK_CLOAKING_3_DESC:0 "§H$CLOAKING_3$§!\n$tech_cloaking_3_desc$"
- TECH_UNLOCK_CLOAKING_DARK_MATTER_TITLE:0 "§HUnlocks Component:§! $CLOAKING_DARK_MATTER$"
+ TECH_UNLOCK_CLOAKING_DARK_MATTER_TITLE:0 "§Hปลดล็อกส่วนประกอบ:§! $CLOAKING_DARK_MATTER$"
  TECH_UNLOCK_CLOAKING_DARK_MATTER_DESC:0 "§H$CLOAKING_DARK_MATTER$§!\n$tech_cloaking_dark_matter_desc$"
- TECH_UNLOCK_CLOAKING_PSI_TITLE:0 "§HUnlocks Component:§! $CLOAKING_PSI$"
+ TECH_UNLOCK_CLOAKING_PSI_TITLE:0 "§Hปลดล็อกส่วนประกอบ:§! $CLOAKING_PSI$"
  TECH_UNLOCK_CLOAKING_PSI_DESC:0 "§H$CLOAKING_PSI$§!\n$tech_cloaking_psi_desc$"
  SCIENCE_CLOAKING_EMPTY:0 "Empty Slot"
  science_cloaking_components:0 " เครื่องกำเนิดสนามพลังพรางตัว"
