--- a/mod/thmod/localisation/english/l_english.yml
+++ b/mod/thmod/localisation/english/l_english.yml
@@ -7833,7 +7833,7 @@
  influence:0 "อิทธิพล"
  influence_desc_shared: "ใช้สำหรับหลายอย่าง เช่น สร้าง §H$starbase_outpost_plural$§!, ทำ §H$claims$§!, และคง §H$research_agreements$§! ไว้ โดยอัตราการเพิ่มจะค่อนข้างคงที่ตลอดทั้งเกม แต่สามารถเพิ่มขึ้นได้$tt_gain$§Y-§! ประกาศให้จักรวรรดิเป็น §Hคู่แข่ง§!\n§Y-§! เสริม §Hการแสดงอำนาจ§! โดยการมี §Hขนาดกองยาน§! ที่ใหญ่เมื่อเทียบกับ §Hขนาดจักรวรรดิ§!"
  influence_desc_hive_mind:3 "§E§Hอิทธิพล§! (£influence£) แสดงถึงความสามารถของ §H$auth_hive_mind$§! เพื่อเข้าควบคุมกาแล็กซีโดยตรงในวงกว้าง\n\n$influence_desc_shared$"
- influence_desc_machine_intelligence:3 "§E§Hอิทธิพล§§! (£influence£) แสดงถึงความสามารถของ §H$auth_machine_intelligence$§! เพื่อเปลี่ยนพลังการประมวลผลเพื่อเข้าควบคุมกาแล็กซีโดยตรง\n\n$influence_desc_shared$"
+ influence_desc_machine_intelligence:3 "§E§Hอิทธิพล§! (£influence£) แสดงถึงความสามารถของ §H$auth_machine_intelligence$§! เพื่อเปลี่ยนพลังการประมวลผลเพื่อเข้าควบคุมกาแล็กซีโดยตรง\n\n$influence_desc_shared$"
  influence_desc:6 "§E§Hอิทธิพล§! (£influence£) แสดงถึงอิทธิพลทางการเมือง\n\n$influence_desc_shared$"
  food:0 "อาหาร"
  food_desc_start: "§E§Hอาหาร§! (£food£) แสดงถึงอาหารต่างๆที่จำเป็นในการดำรงและเพิ่มจำนวน £pop£ §Hประชากร§!"
@@ -8919,6 +8919,7 @@
  civic_worker_coop_desc: "Members of this society enjoy an equal share in the labors, profits and aspirations of the cooperative's ventures."
  civic_machine_spybots: "ชุดคำสั่งสปายแวร์"
  civic_machine_spybots_desc: "This Machine Intelligence has optimized hacking and surveilance protocols. Information acquisition by any means necessary is one of its core directives."
+ civic_machine_spybots_effects: "- $GUARANTEED_RESEARCH_OPTION_STRING$ ['concept_cloaking_1', £physics_research£ $tech_cloaking_1$]"
  civic_machine_astromining_drones: "โดรนทำเหมืองแร่อวกาศ"
  civic_machine_astromining_drones_desc: "This Machine Intelligence is specialized in orbital operations and resource collection. Its menial drones perform poorly in planetside tasks."
  civic_tooltip_worker_coop_effects: "- มีมาตรฐานความเป็นอยู่แบบ §Y$living_standard_worker_ownership$§! ที่จะส่งผลให้ £pop£ ประชากรทั้งหมดมีการบำรุงรักษาที่เป็น £consumer_goods£ §Y$consumer_goods$§! ในระดับปานกลางโดยไม่คำนึงถึง §Yชนชั้น§!\n- ไม่สามารถใช้งาน §Yมาตรฐานความเป็นอยู่§! แบบอื่นๆเป็นส่วนใหญ่ได้\n- สามารถใช้นโยบายการค้า §Y$trade_policy_mutual_aid$§! ที่จะแปลง $r_trade_value$ เป็น $r_energy$, $r_minerals$ และ $r_food$\n- แทนที่งาน £job_executive£ §Y$job_executive$§! และ £job_manager£ §Y$job_manager$§! ด้วยงาน £job_manager£ §Y$job_steward$§! (£job_steward£ §Y$job_steward_plural$§! เปลี่ยน $r_consumer_goods$ เป็น $r_unity$, $r_trade_value$, และ $r_amenities$)"
@@ -12352,7 +12353,7 @@
  RESYNC_OOS: "Resync"
  RESYNC_OOS_TOOLTIP_SERVER: "Send a resync request to all players"
  RESYNC_OOS_TOOLTIP_CLIENT: "Wait for the server to send a resync request"
- MOD_VERSION:0 "Mod v0.73.4, Update 08/06/2024"
+ MOD_VERSION:0 "Mod v0.73.5, Update 20/06/2024"
  MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\n - Arc Furnace -> เตาหลอมอาร์ก\n - Synaptic Lathe -> เครื่องกลึงไซแน็ปติก\n - Dyson Swarm -> ฝูงไดสัน\n - Horizon Needle -> เข็มฮอร์ริซอน \n§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics, Galactic Paragons, Overlord \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt, ZogZag Story, TechOffside, One To Many - A Brief Science\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, 2001: A Space Odyssey, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator, All Tomorrows\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
  MOD_SUPPORTERS:0 "ผู้สนับสนุน: n/a"
  MOD_TEST1DUMMY1:0 "dummy1"
