--- a/mod/thmod/localisation/english/machine_age_situations_2_l_english.yml
+++ b/mod/thmod/localisation/english/machine_age_situations_2_l_english.yml
@@ -32,6 +32,8 @@
  building_identity_complex_effect_desc: "$building_identity_complex_speed$ uploaded per month."
  building_ai_emporium: "AI Emporium"
  building_ai_emporium_desc: "The one stop mega-complex for all your Artificial Intelligence needs. Have sentient AIs transform ordinary objects into smart companions for your family or business. AI a bit too self-aware for its own good? Bring it here and our skilled technicians will reset it faster than the speed of sublight."
+ building_ai_emporium_fail_tt: "$TRIGGER_FAIL$We already have an §Y$building_ai_emporium$§! in the §Y[planet.owner.GetName]§!"
+ building_ai_emporium_outlawed_robots_tt: "$TRIGGER_FAIL$§Y[planet.owner.GetName]§! has outlawed robots"
  building_clear_thought_clinic: "Clear Thought Clinic"
  building_clear_thought_clinic_desc: "Got memories you no longer need? Turn them into Energy Credits! Our trained team will remove them safely and securely! The more joyous the memory, the bigger the payout!\n\nThis operation is final and thought patterns cannot be restored once extracted."
  clear_thought_clinic_modifier: "$building_clear_thought_clinic$"
@@ -174,15 +176,17 @@
  synth.100.a: "We build our own fate."
  synth.100.a.tt: "§RAction required:§!\nBuild an $building_identity_complex$ to resume the §Y$situation_digitization$§! situation."
  synth.105.name: "Better Builds"
- synth.105.desc: "With the increased processing power of a synthetic brain we can surpass our biological constraints. However, the extra power still has limits, so we must prioritize.\n\nWe could focus on amplifying the decision making process, increase memory storage, or streamline mind-limb coordination, all of which would improve certain types of jobs. Alternatively, we could add a small amount of power to each.\n\nThese functions require continuous support and will only be available on planets with an $building_identity_complex$, but our learnings from the test groups will give immediate productivity benefits."
+ synth.105.desc: "With the increased processing power of a synthetic brain we can surpass our biological constraints. However, the extra power still has limits, so we must prioritize.$synth.105.end$"
+ synth.105.end: "\n\nWe could focus on amplifying the decision making process, increase memory storage, or streamline mind-limb coordination, all of which would improve certain types of jobs. Alternatively, we could improve the durability of all bodies.\n\nThese functions require continuous support and will only be available on planets with a robot assembly building, but our learnings from the design will give immediate productivity benefits."
  synth.105.a: "Optimize decision making."
- synth.105.a.tt: "Ruler Pop Resource Output: §G+10%§! with an $building_identity_complex$"
+ build_better_synths: "Robot assembly buildings modifier added:"
+ synth.105.a.tt: "$build_better_synths$\nRuler Pop Resource Output: §G+15%§!\n\n"
  synth.105.b: "Focus on memory storage."
- synth.105.b.tt: "Specialist Pop Resource Output: §G+10%§! with an $building_identity_complex$"
- synth.105.c: "Improve motor functions."
- synth.105.c.tt: "Worker Pop Resource Output: §G+10%§! with an $building_identity_complex$"
- synth.105.d: "Everyone should enjoy these benefits."
- synth.105.d.tt: "Resources From £pop£ Jobs: §G+5%§! with an $building_identity_complex$"
+ synth.105.b.tt: "$build_better_synths$\nSpecialist Pop Resource Output: §G+5%§!\n\n"
+ synth.105.c: "Enhance motor functions."
+ synth.105.c.tt: "$build_better_synths$\nWorker Pop Resource Output: §G+10%§!\n\n"
+ synth.105.d: "Improve durability."
+ synth.105.d.tt: "$build_better_synths$\n$mod_planet_jobs_upkeep_mult$: §G-5%§!\n\n"
  synth.120.name: "Kinesthetic Microfusion"
  synth.120.desc: ""Microfusion mods lets you lift a tank!" crows a major consumer review service. This is not hyperbole: recent developments in microfusion technology promise to significantly improve our machine bodies.\n\nWhile somewhat risky, installing tiny, personal reactors allows for explosive power transfer and enhanced speed. Of course, this would force us to re-evaluate production timelines, as the generators represent a major expansion of the project's scope."
  synth.120.a: "We must strive for excellence!"
