--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -262,6 +262,9 @@
  MOD_POP_ENERGY_MULT:0 "$MOD_POP_ENERGY_ADD$"
  MOD_POP_MINERALS_ADD:0 "กำลังดำเนินการผลิตแร่"
  MOD_POP_MINERALS_MULT:0 "$MOD_POP_MINERALS_ADD$"
+ MOD_FOUNDER_SPECIES_GROWTH_MULT: "['concept_founder_species_growth_mult']"
+ concept_founder_species_growth_mult: "ความเร็วในการเพิ่ม (หรือประกอบ) ประชากร"
+ concept_founder_species_growth_mult_desc: "การปรับเปลี่ยนนี้ขึ้นอยู่กับเผ่าพันธุ์ผู้ก่อตั้งของจักรวรรดิคุณ $NEW_LINE$- เผ่าพันธุ์สิ่งมีชีวิต: §Y$MOD_POP_GROWTH_SPEED$§! $NEW_LINE$- เผ่าพันธุ์สิ่งมีชีวิตที่มีบุตรยาก: §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_MULT$§! $NEW_LINE$- เผ่าพันธุ์จักรกลหรือเครื่องจักร: §Y$MOD_PLANET_POP_ASSEMBLY_MULT$§!"
  MOD_SHIP_ARMOR_ADD:1 "HP เกราะ"
  MOD_SHIP_ARMOR_MULT:1 "HP เกราะ"
  MOD_SHIP_SHIELD_DAMAGE_MULT:0 "ทำความเสียหายกับโล่พลังงาน"
