--- a/mod/thmod/localisation/english/paragon_2_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_2_l_english.yml
@@ -574,7 +574,10 @@
  YOUR_GOVERNOR_PLURAL:0 "ผู้ว่าการของคุณ"
  YOUR_OFFICIAL_PLURAL: "เจ้าหน้าที่ของคุณ"
  YOUR_LEADERS:0 "ผู้นำของคุณ"
- CANNOT_REINFORCE_OVERSIZED_TEMPLATE:0 "§RCan not reinforce a template which is larger than the current Command Limit§!"
+ CANNOT_REINFORCE_OVERSIZED_TEMPLATE: "§RCannot reinforce a template which is larger than the current Command Limit§!"
+ CANNOT_REINFORCE_OVERSIZED_TEMPLATE_FEDERATION: "§RCannot reinforce Federation templates if they exceed the current Federation Naval Capacity§!"
+ CANNOT_REINFORCE_OVERSIZED_TEMPLATE_GDF: "§RCannot reinforce Galactic Defense Force templates if they exceed the current Galactic Defense Force Naval Capacity§!"
+ CANNOT_REINFORCE_OVERSIZED_TEMPLATE_IMPERIAL_ARMADA: "§RCannot reinforce Imperial Armada templates if they exceed the current Imperial Armada Naval Capacity§!"
  YOU_HAVE_NO_COMMANDERS_PLURAL: "You have no Commanders"
  YOU_HAVE_NO_GENERAL_PLURAL:0 "You have no Generals"
  YOU_HAVE_NO_SCENTIST_PLURAL:0 "You have no Scientists"
@@ -627,6 +630,9 @@
  MESSAGE_ALL_GAINED_TRAIT_TITLE:1 "ผู้นำได้รับคุณลักษณะ"
  MESSAGE_ALL_GAINED_TRAIT_DESC:0 "§Yผู้นำ§! ที่เหมาะสมทั้งหมด จะมีคุณลักษณะ $TRAIT|Y$"
  DISABLED_FOR_EMPTY_TEMPLATE:0 "Disabled for empty Fleet Templates"
+ COPY_TEMPLATE_CAPACITY_FULL_FEDERATION: "Copying this template would exceed the Federation Naval Capacity"
+ COPY_TEMPLATE_CAPACITY_FULL_GDF: "Copying this template would exceed the Galactic Defense Force Naval Capacity"
+ COPY_TEMPLATE_CAPACITY_FULL_IMPERIAL_ARMADA: "Copying this template would exceed the Imperial Armada Naval Capacity"
  COUNCIL_COHESION:0 "Cohesion"
  COUNCIL_COHESION_CONTRIBUTION:0 "$NAME$: $VALUE$"
  CURRENT_COUNCIL_COHESION_RATIO:0 "Current Cohesion: $VALUE$%"
