--- a/mod/thmod/localisation/english/traditions_l_english.yml
+++ b/mod/thmod/localisation/english/traditions_l_english.yml
@@ -598,13 +598,14 @@
  tr_cybernetics_synaptic_sub_processing:0 "การประมวลผลระบบประสาทย่อย"
  tr_cybernetics_synaptic_sub_processing_situation: "$tr_cybernetics_synaptic_sub_processing$"
  tr_cybernetics_synaptic_sub_processing_delayed:0 "Offloading routine thought patterns into central hubs decreases the synaptic load on our uplink nodes."
- tr_cybernetics_synaptic_sub_processing_situation_effects: "$tr_cybernetics_situation$$MOD_EMPIRE_SIZE_DISTRICTS_MULT$: §G-50%§!"
+ tr_cybernetics_synaptic_sub_processing_tt: "£building£ §Y$building_spawning_pool$§! ให้ §G+2§! งาน £job_augmentor_drone£ §Y$job_augmentor_drone$§!\n$MOD_EMPIRE_SIZE_DISTRICTS_MULT$: §G-25%§!"
+ tr_cybernetics_synaptic_sub_processing_situation_effects: "$tr_cybernetics_situation$$tr_cybernetics_synaptic_sub_processing_tt$"
  tr_cybernetics_modular_cybernetics:0 "ชิ้นส่วนไซเบอร์เนติกส์"
  tr_cybernetics_modular_cybernetics_delayed:0 "Improving the compatibility of our cybernetic enhancements will reduce downtime while retrofitting."
  tr_cybernetics_modular_cybernetics_hive_delayed:0 "$tr_cybernetics_modular_cybernetics_delayed$"
  tr_cybernetics_modular_cybernetics_tt:1 "§Y$mod_ROBOT_species_trait_points_add$§! and §Y$mod_ROBOT_species_trait_picks_add$§! also apply to Organic species."
  tr_cybernetics_modular_cybernetics_tt_2:0 "$tr_cybernetics_modular_cybernetics_tt$\n$MOD_COUNTRY_MODIFY_SPECIES_COST_MULT$: §G-50%§!"
- tr_cybernetics_modular_cybernetics_hive_tt:0 "£building£ §Y$building_spawning_pool$§! provide §G+2§! £job_augmentor_drone£ §Y$job_augmentor_drone$§! Jobs.\n$MOD_COUNTRY_MODIFY_SPECIES_COST_MULT$: §G-50%§!"
+ tr_cybernetics_modular_cybernetics_hive_tt:0 "$MOD_COUNTRY_MODIFY_SPECIES_COST_MULT$: §G-50%§!\n$mod_BIOLOGICAL_species_trait_points_add$: §G+3§!"
  tr_cybernetics_modular_cybernetics_situation_effects: "$tr_cybernetics_situation$$tr_cybernetics_modular_cybernetics_tt_2$"
  tr_cybernetics_modular_cybernetics_hive_situation_effects: "$tr_cybernetics_situation$$tr_cybernetics_modular_cybernetics_hive_tt$"
  REQUIRES_CYBORG_EMPIRE:1 "$TRIGGER_FAIL$แล้วเสร็จสถานการณ์ §Y[GetCyberSituation]§!"
